# ziti-sdk-nodejs

./: .gitignore  .gitmodules  .npmignore  .travis.yml  .travis.yml-obsolete  API_REFERENCE.hbs  API_REFERENCE.md  CMakeLists.txt  CMakePresets.json  README.hbs  README.md  appveyor.yml  appveyor.yml-obsolete  binding.gyp  configure  configure.cmd  jsdoc.json  main.js  package-lock.json  package.json  vcpkg.json  ziti.js
.github/: dependabot.yml
.github/workflows/: build.yml  cla.yml  codeql-analysis.yml  mattermost-ziti-webhook.yml
cmake/: variables.cmake
includes/nf/: ziti-nodejs.h
lib/: close.js  connect.js  dial.js  enroll.js  express-listener.js  express.js  extAuthToken.js  httpRequest.js  httpRequestData.js  httpRequestEnd.js  index.js  init.js  initExternalAuth.js  listen.js  logger.js  serviceAvailable.js  servicesRefresh.js  setLogLevel.js  websocketClose.js  websocketConnect.js  websocketPing.js  websocketWrite.js  write.js  ziti-socket.js  ziti.js
samples/: http-get.mjs
scripts/: build-appveyor.bat  install_node.sh
src/: NF_close.c  NF_dial.c  NF_enroll.c  NF_hello.c  NF_init.c  NF_service_available.c  NF_shutdown.c  NF_write.c  Ziti_https_request.c  Ziti_https_request_data.c  Ziti_https_request_end.c  build_config.h.in  connect.c  stack_traces.c  utils.c  utils.h  ziti-add-on.c  ziti-nodejs.h  ziti_close.c  ziti_context.c  ziti_dial.c  ziti_enroll.c  ziti_ext_auth.c  ziti_hello.c  ziti_init.c  ziti_listen.c  ziti_sdk_version.c  ziti_service_available.c  ziti_services_refresh.c  ziti_set_log_level.c  ziti_shutdown.c  ziti_websocket_close.c  ziti_websocket_connect.c  ziti_websocket_ping.c  ziti_websocket_write.c  ziti_write.c
tests/: addon.test.js  enroll-test.js  hello.js  https-test.js  logger.test.mjs  mattermost-test.js  websocket-test.js
toolchains/: Linux-arm.cmake  Linux-arm64.cmake  Windows-arm64-msvc.cmake  Windows-x86.cmake  Windows-x86_64.cmake  linux-embedded.cmake  macOS-arm64.cmake  macOS-x86_64.cmake
